tests/baselines/reference/annotationApplicationError12.errors.txt
tests/cases/conformance/annotations/annotationApplicationError12.ets(7,1): error TS28023: Repeatable annotation are not supported, got: '@Anno'.
tests/cases/conformance/annotations/annotationApplicationError12.ets(9,5): error TS28044: Annotation cannot be applied for constructor, got: '@Anno
    @Anno
    constructor() {}'.
tests/cases/conformance/annotations/annotationApplicationError12.ets(10,5): error TS28044: Annotation cannot be applied for constructor, got: '@Anno
    @Anno
    constructor() {}'.


==== tests/cases/conformance/annotations/annotationApplicationError12.ets (3 errors) ====
    @interface Anno {
        a: number = 10
        b: string[] = []
    }
    
    @Anno
    @Anno
    ~~~~~
!!! error TS28023: Repeatable annotation are not supported, got: '@Anno'.
    class C {
        @Anno
        ~~~~~
!!! error TS28044: Annotation cannot be applied for constructor, got: '@Anno
!!! error TS28044:     @Anno
!!! error TS28044:     constructor() {}'.
        @Anno
        ~~~~~
!!! error TS28044: Annotation cannot be applied for constructor, got: '@Anno
!!! error TS28044:     @Anno
!!! error TS28044:     constructor() {}'.
        constructor() {}
    }
    